# migaku-subtitle-generator

./: .gitignore  main.py  migaku_subtitle_generator.py  pyproject.toml
