[tool.poetry]
name = "whisper-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "whisper_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
pysubs2 = "^1.6.0"
pydub = "^0.25.1"
whisper = {git = "https://github.com/openai/whisper"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
