[tool.poetry]
name = "whisper-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "whisper_assistant"}]

[tool.poetry.dependencies]
python = "^3.10"
pysubs2 = "^1.6.0"
pydub = "^0.25.1"
tqdm = "^4.64.1"
whisper = {git = "https://github.com/openai/whisper"}
torch = "^1.13.1"
numpy = "^1.24.1"
transformers = "^4.25.1"
ffmpeg-python = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
